src/assets/scss/blocks/_root.scss
@use '../base/vars';

.root {
	display: grid;
	grid-template-rows: 1fr auto;
	width: 100%;
	height: 100%;
	max-height: calc(var(--vh, 1vh) * 100);
	background-color: var(--root-background-color);
	overflow: auto;

	@media (min-width: vars.$breakpoint-desktop) {
		max-width: min(100vw, var(--root-max-width));
		max-height: min(calc(var(--vh, 1vh) * 100), var(--root-max-height));
		overflow: auto;
	}

	&__desktop {
		display: flex;
		gap: var(--gap, 0rem);
		overflow: auto;
		background-image: var(--wallpaper, none);
		background-size: var(--size, 20px 20px);
		background-repeat: var(--repeat, repeat);
		background-position: var(--position, auto);

		@media (min-width: vars.$breakpoint-desktop) {
			--gap: 1rem;
			position: relative;
		}
	}

	&__taskbar {
		position: sticky;
		bottom: 0;
		left: 0;
		background-color: var(--taskbar-background-color);
	}
}

